--- a/etc/nginx/sites-available/isucondition.conf
+++ b/etc/nginx/sites-available/isucondition.conf
@@ -4,6 +4,10 @@ server {
     ssl_certificate /etc/nginx/certificates/tls-cert.pem;
     ssl_certificate_key /etc/nginx/certificates/tls-key.pem;
 
+    location /initialize {
+        proxy_pass https://isucondition-3.t.isucon.dev/initialize;
+    }
+
     location / {
         proxy_set_header Host $http_host;
         proxy_pass http://127.0.0.1:3000;
